# Personal-Finance-App

./: .gitignore  alembic.ini  app.py  db.py  finance.db  main.py  models.py  pyproject.toml  readme.md  requirements.txt
migration/: env.py
migration/versions/: 1ff852bd6bf9_removed_the_uuid_autogenerator.py  a70242dfe4ed_converted_int_into_uuid_in_user_id.py  b00b3f8c3fd3_add_email_and_password_for_.py
static/: login.css  main.js  style.css
templates/: index.html  login.html  signup.html
